include/dss_capi.h

    DSS_CAPI_DLL void Solution_DoControlActions(void);
    DSS_CAPI_DLL void Solution_SampleControlDevices(void);
    DSS_CAPI_DLL uint16_t Solution_Get_Converged(void);
    DSS_CAPI_DLL void Solution_Set_Converged(uint16_t Value);
    DSS_CAPI_DLL int32_t Solution_Get_Totaliterations(void);
    DSS_CAPI_DLL int32_t Solution_Get_MostIterationsDone(void);
    DSS_CAPI_DLL uint16_t Solution_Get_ControlActionsDone(void);
    DSS_CAPI_DLL void Solution_Set_ControlActionsDone(uint16_t Value);
    DSS_CAPI_DLL void Solution_Cleanup(void);
    DSS_CAPI_DLL void Solution_FinishTimeStep(void);
    DSS_CAPI_DLL double Solution_Get_Process_Time(void);
    DSS_CAPI_DLL double Solution_Get_Total_Time(void);
    DSS_CAPI_DLL void Solution_Set_Total_Time(double Value);
    DSS_CAPI_DLL double Solution_Get_Time_of_Step(void);
    DSS_CAPI_DLL double Solution_Get_IntervalHrs(void);
    DSS_CAPI_DLL void Solution_Set_IntervalHrs(double Value);
    DSS_CAPI_DLL int32_t Solution_Get_MinIterations(void);
    DSS_CAPI_DLL void Solution_Set_MinIterations(int32_t Value);