src/CAPI_Solution.pas

begin
  If ActiveCircuit <> Nil then  Begin
    If AllocateVI = 0 then
       Ymatrix.BuildYMatrix(BuildOption, FALSE)
    else
       Ymatrix.BuildYMatrix(BuildOption, TRUE)
  End;
end;
//------------------------------------------------------------------------------
procedure Solution_DoControlActions();cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.DoControlActions;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_SampleControlDevices();cdecl;
begin
    If ActiveCircuit <> Nil Then Begin
      ActiveCircuit.Solution.SampleControlDevices;
   End;
end;
//------------------------------------------------------------------------------
function Solution_Get_Converged():WordBool;cdecl;
begin
   If ActiveCircuit <> Nil Then Begin
      Result := ActiveCircuit.Issolved;
   End;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Converged(Value: WordBool);cdecl;
{Set the flag directly to force its setting}
begin

   If ActiveCircuit <> Nil Then Begin
     ActiveCircuit.Solution.ConvergedFlag := Value;
     ActiveCircuit.Issolved := Value;
   End;
end;
//------------------------------------------------------------------------------
function Solution_Get_Totaliterations():Integer;cdecl;
// Same as Iterations interface

begin
    If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Iteration
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_MostIterationsDone():Integer;cdecl;
begin
   If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.MostIterationsDone
     Else Result := 0;
end;
//------------------------------------------------------------------------------
function Solution_Get_ControlActionsDone():WordBool;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.ControlActionsDone;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_ControlActionsDone(Value: WordBool);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.ControlActionsDone := Value;
end;
//------------------------------------------------------------------------------
procedure Solution_Cleanup();cdecl;
begin
    If ActiveCircuit <> Nil Then
    WITH ActiveCircuit, ActiveCircuit.Solution Do
      Begin
                EndOfTimeStepCleanup;
    End;
end;
//------------------------------------------------------------------------------
procedure Solution_FinishTimeStep();cdecl;
begin
    If ActiveCircuit <> Nil Then
    WITH ActiveCircuit, ActiveCircuit.Solution Do
      Begin
                MonitorClass.SampleAll;  // Make all monitors take a sample
                EndOfTimeStepCleanup;
                Increment_time;
 //               DefaultHourMult := DefaultDailyShapeObj.getmult(TDynamicsrec.dblHour);
    End;
end;
//------------------------------------------------------------------------------
function Solution_Get_Process_Time():Double;cdecl;
begin
    If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Time_Solve;
end;
//------------------------------------------------------------------------------
function Solution_Get_Total_Time():Double;cdecl;
begin
    If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Total_Time;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_Total_Time(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.Total_Time   :=  Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_Time_of_Step():Double;cdecl;
begin
    If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.Time_Step;
end;
//------------------------------------------------------------------------------
function Solution_Get_IntervalHrs():Double;cdecl;
begin
    If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.IntervalHrs;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_IntervalHrs(Value: Double);cdecl;
begin
     If ActiveCircuit <> Nil Then ActiveCircuit.Solution.IntervalHrs := Value;
end;
//------------------------------------------------------------------------------
function Solution_Get_MinIterations():Integer;cdecl;
begin
     If ActiveCircuit <> Nil Then Result := ActiveCircuit.Solution.MinIterations
     Else Result := 0;
end;
//------------------------------------------------------------------------------
procedure Solution_Set_MinIterations(Value: Integer);cdecl;
begin
    If ActiveCircuit <> Nil Then ActiveCircuit.Solution.MinIterations  := Value;
end;
//------------------------------------------------------------------------------
END.
